--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -162,21 +162,25 @@ img, figure {
     a { color: color("light-green", "base"); }
     .btn, .btn-large, button, input[type="button"], input[type="reset"], input[type="submit"] { background: color("light-green", "base"); }
     blockquote { border-left: 5px solid color("light-green", "lighten-3"); }
+    ul#nav-mobile a { color: #333; }
 }
 .accent-lime {
     a { color: color("lime", "base"); }
     .btn, .btn-large, button, input[type="button"], input[type="reset"], input[type="submit"] { background: color("lime", "base"); }
     blockquote { border-left: 5px solid color("lime", "lighten-3"); }
+    ul#nav-mobile a { color: #333; }
 }
 .accent-yellow {
     a { color: color("yellow", "base"); }
     .btn, .btn-large, button, input[type="button"], input[type="reset"], input[type="submit"] { background: color("yellow", "base"); }
     blockquote { border-left: 5px solid color("yellow", "lighten-3"); }
+    ul#nav-mobile a { color: #333; }
 }
 .accent-amber {
     a { color: color("amber", "base"); }
     .btn, .btn-large, button, input[type="button"], input[type="reset"], input[type="submit"] { background: color("amber", "base"); }
     blockquote { border-left: 5px solid color("amber", "lighten-3"); }
+    ul#nav-mobile a { color: #333; }
 }
 .accent-orange {
     a { color: color("orange", "base"); }
@@ -197,6 +201,7 @@ img, figure {
     a { color: color("grey", "base"); }
     .btn, .btn-large, button, input[type="button"], input[type="reset"], input[type="submit"] { background: color("grey", "base"); }
     blockquote { border-left: 5px solid color("grey", "lighten-3"); }
+    ul#nav-mobile a { color: #333; }
 }
 .accent-blue-grey {
     a { color: color("blue-grey", "base"); }
